homepage/src/components/Nav/NavBar.css
.nav-wrapper {
    transition: background-color 0.2s ease-in;
    position: fixed;
    z-index: 1000;
    background-color: transparent;
}

.nav-wrapper.scrolled {
    transition: background-color 0.2s ease-in;
    position: fixed;
    z-index: 1000;
    background-color: #2d92c4;
}

.logo {
    display: inline-block;
    height: 100%;
}

.logo > img {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.link-text {
    font-family: "Courier New", Courier, monospace;
}

.burger-icon {
    padding: 0;
    border: 0;
    background-color: transparent;
    text-decoration: none;
}

.sidenav {
    margin-top: auto;
    margin-bottom: auto;
    background-color: #84bdc4;
    z-index: 2000;
}

.outer {
    height: 100%;
    width: 100%;
}

.sidenav-content {
    width: 100%;
    position: absolute;
    top: 50%;
    transform: translateY(-80%);
}

